# FlashGo

./: .gitignore  Cargo.toml  build.rs  diagram.json  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
scripts/: build.sh  flash.sh
src/: build.rs  consts.rs  core.rs  main.rs  mic.rs  protos.rs  time.rs
src/animations/: animation.rs  animation_controller.rs  mod.rs  orchestrator.rs
src/animations/protos/: mod.rs  set_animation.proto  set_bpm.proto
src/animations/protos/animations/: bpm_color.proto  rainbow.proto  random_blink.proto  strobe.proto  wave.proto
src/animations/protos/configs/: mod.rs  rainbow_config.proto
src/animations/thread/: thread.rs
src/drivers/: ble.rs  driver.rs  espnow.rs  leds.rs  mic.rs  mod.rs  sync.rs
src/drivers/esp/: ble.rs  config.rs  driver.rs  leds.rs  leds_driver.rs  mic.rs  mod.rs  sync.rs
src/drivers/web/: ble.rs  driver.rs  leds.rs  mic.rs  mod.rs  sync.rs
src/leds/: animation_controller.rs  color.rs  controller.rs  driver.rs  led.rs  leds_controller.rs  mod.rs
src/leds/animations/: anim_bpm_color.rs  anim_rainbow.rs  anim_random_blink.rs  anim_strobe.rs  anim_wave.rs  animation.rs  config.rs  controller.rs  mod.rs  state.rs
src/leds/animations/configs/: mod.rs  rainbow_config.proto
src/leds/animations/thread/: messages.rs  mod.rs
src/leds/thread/: communicator.rs  messages.rs  mod.rs  thread.rs
src/mic/: mic.rs  mic_reader.rs  micreader.rs  mod.rs
src/server/: bluetooth_server.rs  mod.rs
src/server/bluetooth/: server.rs
src/server/bluetooth/services/: mod.rs  service.rs
src/server/bluetooth/services/identity/: characteristic.rs  mod.rs  service.rs
src/sync/: mod.rs
src/sync/protos/: ack.proto  packet.proto  ping_pong.proto  sync.proto
src/utils/: mod.rs  utils.proto
