[package]
name = "flashgo-std"
version = "0.1.0"
authors = ["leomelki <melkileo@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "flashgo-std"
harness = false      # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
wasm = ["dep:wasm-bindgen"]
esp = ["embuild/espidf", "dep:esp-idf-svc"]

[dependencies]
log = { version = "0.4", default-features = false }
micropb = "0.1.0"
microfft = "0.6.0"
embassy-futures = "0.1.1"
wasm-bindgen = { version = "0.2.100", optional = true }
esp-idf-svc = { version = "0.49", default-features = false, features=["native", "binstart", "std", "alloc"], optional = true }
anyhow = "1.0.97"

[build-dependencies]
embuild = { version = "0.32.0", optional = true }
