[package]
name = "flashgo-std"
version = "0.1.0"
authors = ["leomelki <melkileo@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.76.0"

[[bin]]
name = "flashgo-std"
harness = false      # do not use the built in cargo test harness -> resolve rust-analyzer errors

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
wasm = ["dep:wasm-bindgen", "dep:gloo-timers", "dep:wasm-bindgen-futures", "dep:web-time"]
esp = ["embuild/espidf", "dep:esp-idf-svc", "embassy", "dep:embuild"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/embassy-time-driver",
    "dep:embassy-futures",
    "dep:embassy-time",
    "dep:embassy-sync",
    "dep:embassy-executor"
]

[dependencies]
log = { version = "0.4", default-features = false }
micropb = "0.1.0"
microfft = { version = "0.6.0", default-features = false, features = ["size-1024"] }
wasm-bindgen = { version = "0.2.100", optional = true }
esp-idf-svc = { version = "0.49.1", default-features = false, features = [
    "native",
    "binstart",
    "std",
    "alloc"
], optional = true }
anyhow = "1.0.97"
web-time = { version = "1.1.0", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
futures = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
embassy-futures = { version = "0.1.1", optional = true }
embassy-sync = { version = "0.6", optional = true }
embassy-time = { version = "0.3", features = ["generic-queue"], optional = true }
bbqueue = "0.5.1"
embassy-executor = {version = "0.7", optional = true, features = [
    "arch-std",
    "executor-thread",
    "log",
] }
static_cell = "2.1.0"
embedded-hal-async = "1.0.0"

[build-dependencies]
embuild = { version = "0.32.0", optional = true }
